# gridpace

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  deploy.yml
config/: settings.yml
docs/: architecture.md  data_sources.md  mlops.md  security.md  setup.md
docs/runbooks/: api_outage.md
scripts/: backfill_events.py  diagnostics.py  seed_db.py
src/gridpace/: config.py
src/gridpace/grid/: flows.py  migrator.py  storage.py  validation.py
src/gridpace/grid/clients/: gridstatus.py
src/gridpace/grid/contracts/: gridstatus.yml
src/gridpace/grid/migrations/: 001_create_bronze_silver_gold.sql  002_add_fuel_mix_to_gold.sql
src/gridpace/grid/transformers/: gridstatus.py  utils.py
src/gridpace/intelligence/detection/: anomaly.py
src/gridpace/monitoring/: data_health.py  db_health.py  health.py  logger.py  types.py
src/gridpace/ui/: app.py
src/gridpace/ui/components/: health_tab.py  iso_cards.py  price_charts.py
tests/: conftest.py
tests/integration/grid/: test_gridstatus_live.py
tests/unit/: test_anomaly.py  test_config.py  test_health.py  test_logger.py  test_transformers.py  test_ui.py
tests/unit/grid/: conftest.py  test_flows.py  test_gridstatus_client.py  test_health.py  test_migrator.py  test_storage.py  test_storage_retention.py  test_validation.py
